--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Nyxo Studio - Interactive Hub</title>
+    <title>Nyxo Studio - Developer</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
@@ -418,9 +418,9 @@
 ];
 
         const socials = [
-            { name: 'WhatsApp', icon: 'fa-brands fa-whatsapp', type: 'soc', link: 'https://wa.me/' },
-            { name: 'GitHub', icon: 'fa-brands fa-github', type: 'soc', link: 'https://github.com' },
-            { name: 'Telegram', icon: 'fa-brands fa-telegram', type: 'soc', link: 'https://t.me/' },
+            { name: 'WhatsApp', icon: 'fa-brands fa-whatsapp', type: 'soc', link: 'https://whatsapp.com/channel/0029VbBlGo32975KC2Vm840M' },
+            { name: 'GitHub', icon: 'fa-brands fa-github', type: 'soc', link: 'https://github.com/nyxostudio' },
+            { name: 'Telegram', icon: 'fa-brands fa-telegram', type: 'soc', link: 'https://t.me/nyxostudio' },
             { name: 'TikTok', icon: 'fa-brands fa-tiktok', type: 'soc', link: 'https://tiktok.com' },
             { name: 'Instagram', icon: 'fa-brands fa-instagram', type: 'soc', link: 'https://instagram.com' },
             { name: 'LinkedIn', icon: 'fa-brands fa-linkedin', type: 'soc', link: 'https://linkedin.com' }
