--- a/index.html
+++ b/index.html
@@ -378,12 +378,13 @@
             <img src="https://files.catbox.moe/ztnnzm.jpg" alt="Nyxo Profile" class="profile-pic">
         </div>
         
-        <h1 class="glitch-title" data-text="NYXO STUDIO">NYXO STUDIO</h1>
+        <h1 class="glitch-title" data-text="vvy">vvyෆ</h1>
         <p class="description" id="profile-desc">
             Hello, my store name is nyxostudio, and my real name is vvy..<br>
             There are no stories here that are truly finished.
 Only leftover effort, fading spirit, and small steps forced to keep moving.
-Sometimes strong, sometimes not — but still going.
+Sometimes strong, sometimes not — but still going.<br><br>
+Don't forget to check out the vvy channel.♥︎
         </p>
     </main>
 
